# python-modules

./: .gitignore
module1/myservice/: requirements.txt  setup.py
module1/userservice/: app.py  menu.json  pyproject.toml  user.txt  users.csv
module10/fast-api-demo/: main.py  models.py
module11/: ReadMe.md  docker-compose.yml
module11/auth_service/: auth_database.py  auth_main.py  dockerfile  models.py  otel_config.py  requirements.txt  schemas.py
module11/employee_service/: dockerfile  locustfile.py  main.py  models.py  otel_config.py  requirements.txt  schemas.py
module11/notification_service/: dockerfile  main.py  otel_config.py  requirements.txt  schemas.py
module12_Docker/: Dockerfile  main.py
module13_notesapp/: .dockerignore  Dockerfile  Dockerfileold  README.md  app.py  docker-compose.yml  migrate.py  requirements.txt  test_app.py
module14/: docker-compose.yml
module14/nosql/: app.py
module14/sql/: app.py  dockerfile
module15/: test_index.py  transaction_notes.py
module15/nosql/: app.py  requirements.txt
module15/sql/: app.py  requirements.txt
module16/notes-publisher/: app.py  dockerfile
module16/notes-pull-sub-fastapi/: app.py  dockerfile
module16/notes-subscriber/: dockerfile  pull_demo.py  push_server.py
module16/redis-cache-subs/: app.py  dockerfile
module2/library-app/: app.py  client.py  pyproject.toml
module3/library_flask_app/: .env  app.py  requirements.txt
module4/contact_app/: .env
module5/contact_app/: .env  requirements.txt
module6/contact_app/: .env.development  .env.production  .env.staging  (+1 more)
(+31 files in other folders)
